--- a/trunk/todo
+++ b/trunk/todo
@@ -1,3 +1,11 @@
+-3.
+
+<li class="dot"></li>
+<li><a href="/tagChannel/271/0/0/m/">数学</a></li>
+<li class="dot"></li>
+<li><a href="/tagChannel/272/0/0/f/">计算机</a></li>
+
+
 -2.
 
 <section id="tabs">
